--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "redirects": [
     {
       "source": "/my-redirect",
-      "destination": "https://maps.app.goo.gl/d1fskNGdGPdoixMa7?g_st=ac",
+      "destination": "https://maps.app.goo.gl/W5L9FX6z11KrE7fH9",
       "permanent": true
     }
   ]
